# sentinel-azure-governance-platform

./: README.md
.github/workflows/: infra-validation.yml  sentinel-gate.yml  static-analysis.yml
architecture/: platform_overview.md  solution_design.md
architecture/diagrams/: platform_map.md  sentinel_lifecycle.md
contracts/: audit_entity_schema.json  bc_general_ledger.yaml
docs/: README.md  makefile  pyproject.toml
docs/adr/: 001-use-sentinel-validation-gate.md
infra/terraform/: main.tf  networking.tf  roles_permissions.tf
orchestration/adf/: master_pipeline.json
orchestration/webhooks/: continuous_auditor_trigger.py
scripts/: bootstrap_env.sh
scripts/simulation/: chaos_monkey.py
sentinel/: engine.py
sentinel/adapters/: adls_adapter.py  business_central.py
sentinel/checks/: anomaly_detection.py  schema_drift.py  smart_refresh.py
sql/datamarts/: S40_Continuous_Auditor_View.sql
sql/ods/: S30_Standardized_Model.sql
sql/staging/: S20_Persistent_Staging.sql
tests/: conftest.py
tests/integration/: test_bc_to_sql_pipeline.py
tests/unit/: test_sentinel_checks.py
